OpenEXR and CxImage compiling and linking on Ubuntu/Clang. Successful reads and writes of various image file formats (including jpg, png, bmp, and tga). gif writes incorrect. A single unit test failure (infinite loop) calling tFastPool free still exists.

--- a/Modules/Image/Linux/Image.project
+++ b/Modules/Image/Linux/Image.project
@@ -325,7 +325,170 @@
       </VirtualDirectory>
     </VirtualDirectory>
     <VirtualDirectory Name="CxImage">
-      <VirtualDirectory Name="png"/>
+      <VirtualDirectory Name="jpeg">
+        <File Name="../../../Contrib/CxImage/jpeg/transupp.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jversion.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jpeglib.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jpegint.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jmorecfg.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jmemsys.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jinclude.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jerror.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdct.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jconfig.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/cdjpeg.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/cderror.h"/>
+        <File Name="../../../Contrib/CxImage/jpeg/wrtarga.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/wrrle.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/wrppm.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/wrjpgcom.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/wrgif.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/wrbmp.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/transupp.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/rdtarga.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/rdswitch.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/rdrle.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/rdppm.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/rdjpgcom.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/rdgif.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/rdcolmap.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/rdbmp.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jutils.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jquant2.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jquant1.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jpegtran.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jmemnobs.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jmemname.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jmemmgr.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jmemansi.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jidctint.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jidctfst.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jidctflt.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jfdctint.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jfdctfst.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jfdctflt.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jerror.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdtrans.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdsample.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdpostct.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdmerge.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdmaster.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdmarker.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdmainct.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdinput.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdhuff.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jddctmgr.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdcolor.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdcoefct.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdatasrc.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdatadst.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdarith.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdapistd.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jdapimin.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jctrans.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcsample.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcprepct.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcparam.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcomapi.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcmaster.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcmarker.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcmainct.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcinit.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jchuff.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcdctmgr.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jccolor.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jccoefct.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcarith.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcapistd.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jcapimin.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/jaricom.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/djpeg.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/ckconfig.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/cjpeg.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/cdjpeg.c"/>
+        <File Name="../../../Contrib/CxImage/jpeg/ansi2knr.c"/>
+      </VirtualDirectory>
+      <VirtualDirectory Name="tiff">
+        <File Name="../../../Contrib/CxImage/tiff/uvcode.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_predict.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tiffvers.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tiffiop.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tiffio.hxx"/>
+        <File Name="../../../Contrib/CxImage/tiff/tiffio.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tiffconf.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_fax3.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tiff.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_dir.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_config.wince.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_config.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/t4.h"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_zip.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_write.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_warning.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_version.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_unix.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_tile.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_thunder.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_swab.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_strip.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_stream.cxx"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_read.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_print.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_predict.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_pixarlog.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_packbits.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_open.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_ojpeg.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_next.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_lzw.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_luv.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_jpeg.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_jbig.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_getimage_.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_getimage.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_flush.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_fax3sm.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_fax3.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_extension.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_error.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_dumpmode.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_dirwrite.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_dirread.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_dirinfo.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_dir.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_compress.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_color.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_codec.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_close.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/tif_aux.c"/>
+        <File Name="../../../Contrib/CxImage/tiff/mkg3states.c"/>
+      </VirtualDirectory>
+      <VirtualDirectory Name="png">
+        <File Name="../../../Contrib/CxImage/png/pngstruct.h"/>
+        <File Name="../../../Contrib/CxImage/png/pngpriv.h"/>
+        <File Name="../../../Contrib/CxImage/png/pnglibconf.h"/>
+        <File Name="../../../Contrib/CxImage/png/pnginfo.h"/>
+        <File Name="../../../Contrib/CxImage/png/pngdebug.h"/>
+        <File Name="../../../Contrib/CxImage/png/pngconf.h"/>
+        <File Name="../../../Contrib/CxImage/png/png.h"/>
+        <File Name="../../../Contrib/CxImage/png/pngwutil.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngwtran.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngwrite.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngwio.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngtrans.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngtest.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngset.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngrutil.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngrtran.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngrio.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngread.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngpread.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngmem.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngget.c"/>
+        <File Name="../../../Contrib/CxImage/png/pngerror.c"/>
+        <File Name="../../../Contrib/CxImage/png/png.c"/>
+        <File Name="../../../Contrib/CxImage/png/example.c"/>
+      </VirtualDirectory>
       <VirtualDirectory Name="jasper"/>
       <VirtualDirectory Name="zlib">
         <File Name="../../../Contrib/CxImage/zlib/zutil.h"/>
@@ -447,6 +610,7 @@
   <Settings Type="Static Library">
     <GlobalSettings>
       <Compiler Options="-Wno-switch;-std=c++17" C_Options="" Assembler="">
+        <IncludePath Value="."/>
         <IncludePath Value="../Inc"/>
         <IncludePath Value="../../Foundation/Inc"/>
         <IncludePath Value="../../System/Inc"/>
