--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,4 @@ Tools/TextureViewer/Release/
 /UnitTests/Linux/.build-debug/System
 /UnitTests/Linux/.build-release/System
 /UnitTests/Linux/Release/UnitTests
+/Modules/Math/Linux/compile_flags.txt
