Cleaning up gitignores.

--- a/.gitignore
+++ b/.gitignore
@@ -1,93 +1,63 @@
-.vs/*
+# Every folder with the name.
+.vs/
+.build-debug/
+.build-release/
+.codelite/
+Debug/
+Release/
 
-UnitTests/.vs/*
-UnitTests/Linux/.build-release/*
-UnitTests/Linux/.codelite/*
+# Specifc filenames.
+compile_flags.txt
 
+# Specific filetypes to ignore everywhere.
 *.log
-
 *.tlog
-
 *.obj
-
-*.vcxproj.user
-!UnitTests/Windows/*.vcxproj.user
-
-Contrib/CxImage/CxImage/x64/Debug/cximage\.pdb
-
-*.lib
-
-!Contrib/glfw/Debug/*.lib
-!Contrib/glfw/Release/*.lib
-
-*.idb
-
-*.pdb
-!Contrib/glfw/Debug/*.pdb
-!Contrib/glfw/Release/*.pdb
-
-Tools/UnitTests/TestData/WrittenChunk\.bin
-
-*.ilk
-
-Tools/UnitTests/TestData/WrittenScript\.txt
-
-Tools/UnitTests/TestData/WrittenTestDXT1\.tac
-
-*.exe
-
-Tools/UnitTests/TestData/WrittenWiredDrives\.tga
-
-Tools/UnitTests/TestData/WrittenXeyes\.tga
-
-*.suo
-
-*.db
-
-*.db-shm
-
-*.db-wal
-
-*.exp
-
-Contrib/NvidiaTextureTools/project/vs/nvtt/x64/Debug/nvtt\.res
-
-*.ipch
-
-*.opendb
-
-Contrib/NvidiaTextureTools/project/vs/nvtt/x64/Release/nvtt\.res
-
-Tools/TextureViewer/imgui\.ini
-
-*.aps
-
-Tools/TextureViewer/Debug/TextureViewer\.res
-
-*.iobj
-
-*.ipdb
-
-Tools/TextureViewer/Release/
-
+*.o
 *.FileListAbsolute.txt
 *.cpp.o
 *.cpp.o.d
 *.a
 *.d
 *.mk
-/UnitTests/Linux/.build-debug/Image
+*.idb
+*.ilk
+*.exe
+*.suo
+*.db
+*.db-shm
+*.db-wal
+*.exp
+*.ipch
+*.opendb
+*.aps
+*.iobj
+*.ipdb
 *.so
 *.tags
 *.session
 *.c.o
 *.cxx.o
+*.pdb
+
+*.vcxproj.user
+!UnitTests/Windows/*.vcxproj.user
+
+*.lib
+!Contrib/glfw/Debug/*.lib
+!Contrib/glfw/Release/*.lib
+
+*.pdb
+!Contrib/glfw/Debug/*.pdb
+!Contrib/glfw/Release/*.pdb
+
+Tools/UnitTests/TestData/WrittenChunk\.bin
+Tools/UnitTests/TestData/WrittenScript\.txt
+Tools/UnitTests/TestData/WrittenTestDXT1\.tac
+Tools/UnitTests/TestData/WrittenWiredDrives\.tga
+Tools/UnitTests/TestData/WrittenXeyes\.tga
 /UnitTests/UnitTests
-/UnitTests/Linux/Debug/UnitTests
-/UnitTests/Linux/.build-debug/Foundation
-/UnitTests/Linux/.build-debug/Math
-/UnitTests/Linux/.build-release/Math
-/UnitTests/Linux/.build-debug/System
-/UnitTests/Linux/.build-release/System
-/UnitTests/Linux/Release/UnitTests
-/Modules/Math/Linux/compile_flags.txt
+
+Tools/TextureViewer/imgui\.ini
+
+#/Modules/Math/Linux/compile_flags.txt
