Nearly finished organizing gitignores. They were a mess.

--- a/UnitTests/Linux/.gitignore
+++ b/UnitTests/Linux/.gitignore
@@ -1,6 +1,6 @@
-/compile_commands.json
-/compile_flags.txt
-/Makefile
-/UnitTests.mk
-/UnitTests.txt
-/UnitTests
+#/compile_commands.json
+#/compile_flags.txt
+#/Makefile
+#/UnitTests.mk
+#/UnitTests.txt
+#/UnitTests
