--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ Release/
 
 # Specifc filenames.
 compile_flags.txt
+compile_commands.json
+#Makefile
 
 # Specific filetypes to ignore everywhere.
 *.log
@@ -39,6 +41,7 @@ compile_flags.txt
 *.c.o
 *.cxx.o
 *.pdb
+*.tac
 
 *.vcxproj.user
 !UnitTests/Windows/*.vcxproj.user
@@ -51,13 +54,14 @@ compile_flags.txt
 !Contrib/glfw/Debug/*.pdb
 !Contrib/glfw/Release/*.pdb
 
-Tools/UnitTests/TestData/WrittenChunk\.bin
-Tools/UnitTests/TestData/WrittenScript\.txt
-Tools/UnitTests/TestData/WrittenTestDXT1\.tac
-Tools/UnitTests/TestData/WrittenWiredDrives\.tga
-Tools/UnitTests/TestData/WrittenXeyes\.tga
+# Specific files.
+/Modules/Foundation/Linux/Foundation.txt
+/Modules/Image/Linux/Image.txt
+/Modules/Math/Linux/Math.txt
+/Modules/System/Linux/System.txt
+/UnitTests/Linux/Makefile
+/UnitTests/Linux/UnitTests.txt
+/UnitTests/TestData/Written*.*
 /UnitTests/UnitTests
 
-Tools/TextureViewer/imgui\.ini
 
-#/Modules/Math/Linux/compile_flags.txt
