--- a/UnitTests/TestData/.gitignore
+++ b/UnitTests/TestData/.gitignore
@@ -1,8 +1,8 @@
-/WrittenXeyesBMP.bmp
-/WrittenXeyesGIF.gif
-/WrittenXeyesJPG.jpg
-/WrittenXeyesPNG.png
-/WrittenXeyesTGA.tga
-/WrittenWiredDrives.tga
-*.tac
-/WrittenConfig.cfg
+#/WrittenXeyesBMP.bmp
+#/WrittenXeyesGIF.gif
+#/WrittenXeyesJPG.jpg
+#/WrittenXeyesPNG.png
+#/WrittenXeyesTGA.tga
+#/WrittenWiredDrives.tga
+#*.tac
+#/WrittenConfig.cfg
