--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,5 @@ jobs:
     # use msbuild to build VS solution which has the SSDT project
     - name: Build Solution
       run: |
-        echo "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\bin\MSBuild.exe MercuryHealthCore.sln" "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" TheSolutionFile.sln
+        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\bin\MSBuild.exe UnitTests\Windows\UnitTests.sln"
+        "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe" "UnitTests\Windows\UnitTests.sln"
