--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,17 @@ jobs:
     # Use msbuild to build the VS solution
     - name: Build Solution
       run: |
-        cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
-        .\MSBuild.exe $Env:GITHUB_WORKSPACE\UnitTests\Windows\UnitTests.sln
-        dir
+        # cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
+        # .\MSBuild.exe $Env:GITHUB_WORKSPACE\UnitTests\Windows\UnitTests.sln
+        # dir
+        echo Building Solution
         & 'C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\MSBuild.exe' $Env:GITHUB_WORKSPACE\UnitTests\Windows\UnitTests.sln
-        
+        echo Done Building Solution
+    
+    - name: Unit Tests
+    - name: Build Solution
+      run: |
+        echo Running Unit Tests
+        .\UnitTests\UnitTests.exe
+        echo Done Running Unit Tests
+      
