--- a/Modules/Image/Linux/Image.project
+++ b/Modules/Image/Linux/Image.project
@@ -628,8 +628,10 @@
         <IncludePath Value="../../../Contrib/OpenEXR/zlib"/>
         <Preprocessor Value="PLATFORM_LINUX"/>
         <Preprocessor Value="_LINUX"/>
+        <Preprocessor Value="ILMBASE_FORCE_CXX03"/>
+        <Preprocessor Value="HAVE_PTHREAD"/>
       </Compiler>
-      <Linker Options="">
+      <Linker Options="-pthread">
         <LibraryPath Value="."/>
       </Linker>
       <ResourceCompiler Options=""/>
