Updated tacent with ico loading module.

--- a/Modules/Image/Linux/Image.project
+++ b/Modules/Image/Linux/Image.project
@@ -584,6 +584,7 @@
   <Description/>
   <Dependencies/>
   <VirtualDirectory Name="Src">
+    <File Name="../Src/tImageICO.cpp"/>
     <File Name="../Src/tTexture.cpp"/>
     <File Name="../Src/tPixelFormat.cpp"/>
     <File Name="../Src/tPicture.cpp"/>
@@ -596,6 +597,7 @@
     <File Name="../Src/tCubemap.cpp"/>
   </VirtualDirectory>
   <VirtualDirectory Name="Inc">
+    <File Name="../Inc/Image/tImageICO.h"/>
     <File Name="../Inc/Image/tTexture.h"/>
     <File Name="../Inc/Image/tPixelFormat.h"/>
     <File Name="../Inc/Image/tPicture.h"/>
